# template_app

./: .editorconfig  .eslintrc  .gitignore  .stylelintrc  Cargo.toml  README.md  babel.config.js  gulpfile.js  package.json  rustfmt.toml  webpack.config.js
configurations/: config.example.toml  log4rs.yaml
docs/: getting_start.md  static.md
frontend/app/styles/: main.less
frontend/app/templates/: index.pug
frontend/error/templates/: 400.pug  404.pug  500.pug  _layout.pug
migrations/2020-06-11-200204_servender/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: mod.rs
src/database/read/: mod.rs  pages.rs  routes.rs  statics.rs
src/models/: configuration.rs  database.rs  mod.rs
src/routes/: admin.rs  app.rs  error.rs  frame.rs  mod.rs
