[package]
name = "servos"
version = "0.1.0"
authors = ["lazaryan <lazaryan99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
log4rs = "0.12.0"
lazy_static = "1.4.0"
config = "0.10.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_derives = "1.4.1"
tera = "1.3.1"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-service = "1.0.5"
actix-redis = "0.8.2"
actix-session = "0.3.0"
actix-http = "1.0.1"
